# client

./: .gitignore  AGENTS.md  README.md  ROADMAP.md
js/: .gitignore  AGENTS.md  README.md  ROADMAP.md
js/ux/: AGENTS.md  README.md
py/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  requirements.txt  setup.cfg
py/examples/: library_integration_example.py
py/tests/: __init__.py  support.py  test_backend.py  test_define_aliases.py  test_define_library.py  test_executor_decorators.py  test_http_rpc_gateway.py  test_install_define_library.py  test_install_wasm_script.py  test_uri_helpers.py
py/tinychain/: __init__.py  define.py  executor.py  kernel.py  library.py  opref.py  ref.py  testing.py  uri.py  wasm.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
